--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Restaurant Style</title>
 </head>
 <body>
-    
+    <h1>Restaurant Style</h1>
+    <div id="main">
+
+        
+    </div>
+
+    <script src="javascripts/index.js"></script>
 </body>
 </html>
