--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Restaurant Style</h1>
+    <ul>
+        <li><a href="#" id="form-link">Add a Restaurant</a></li>
+        <li><a href="#" id="restaurants-link">List Restaurants</a></li>
+    </ul>
     <div id="main">
         
     </div>
