added global.js to index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         
     </div>
 
+    <script src="javascripts/globals.js"></script>
     <script src="javascripts/index.js"></script>
 </body>
 </html>
