added restaurant js to index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </div>
 
     <script src="javascripts/globals.js"></script>
+    <script src="javascripts/models/restaurant.js"></script>
     <script src="javascripts/index.js"></script>
 </body>
 </html>
