--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <script src="javascripts/globals.js"></script>
     <script src="javascripts/models/restaurant.js"></script>
+    <script src="javascripts/services/api.js"></script>
     <script src="javascripts/index.js"></script>
 </body>
 </html>
