--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant Style</title>
+
+    <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 <body>
     <h1>Restaurant Style</h1>
