added a background color

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="stylesheets/style.css">
 </head>
-<body>
+<body style="background-color: #90b8f7">
     <h1>Restaurant Style</h1>
     <ul>
         <li><a href="#" id="form-link">Add a Restaurant</a></li>
