--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
     <title>Restaurant Style</title>
 
     <link rel="stylesheet" href="stylesheets/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 </head>
 <body style="background-color: #90b8f7">
-    <h1>Restaurant Style</h1>
-    <ul>
-        <li><a href="#" id="form-link">Add a Restaurant</a></li>
-        <li><a href="#" id="restaurants-link">List Restaurants</a></li>
-    </ul>
-    <div id="main">
-        
+    <nav>
+        <a href="#" id="form-link">Add a Restaurant</a>
+        <a href="#" id="restaurants-link">List Restaurants</a>
+    </nav>
+    <div class="container">
+        <h1>Restaurant Style</h1>
+        <div id="main">
+            
+        </div>
     </div>
 
     <script src="javascripts/globals.js"></script>
