--- a/index.html
+++ b/index.html
@@ -10,12 +10,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 </head>
 <body style="background-color: #90b8f7">
-    <nav>
-        <a href="#" id="form-link">Add a Restaurant</a>
-        <a href="#" id="restaurants-link">List Restaurants</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Restaurant Style</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <!-- <a href="#" id="form-link">Add a Restaurant</a>
+            <a href="#" id="restaurants-link">List Restaurants</a> -->
+        </div>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                <a class="nav-link active" id= "form-link" aria-current="page" href="#">Add a Restaurant</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" id="restaurants-link" href="#">List Restaurants</a>
+                </li>
+            </ul>
+    </div>
     </nav>
     <div class="container">
-        <h1>Restaurant Style</h1>
         <div id="main">
             
         </div>
