added search bar by style

--- a/index.html
+++ b/index.html
@@ -27,10 +27,14 @@
                 <li class="nav-item">
                 <a class="nav-link" id="restaurants-link" href="#">List Restaurants</a>
                 </li>
+                <li class="nav-item">
+                    <input type="text" id="search-by-style" placeholder="Search By Style">
+                </li>
             </ul>
     </div>
     </nav>
     <div class="container">
+        
         <div id="main">
             
         </div>
